--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "~9.1.0",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular-bootstrap-md": "^9.3.0",
+    "bootstrap": "^4.4.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
